# mod8-pon3

./: CMakeLists.txt  README.md  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_ros_chatbot_package/share/ament_index/resource_index/parent_prefix_path/: my_ros_chatbot_package
install/my_ros_chatbot_package/share/my_ros_chatbot_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: chatbot_launch.launch
log/: latest_build
scripts/: chatbot_node.py
